--- a/src/assets/components/OneBlock.css
+++ b/src/assets/components/OneBlock.css
@@ -1,17 +1,13 @@
 .one-block {
     width: 50px;
     height: 50px;
-    background-color: #e0e0e0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #666;
-    transition: background-color 0.3s ease;
+    background-color: rgb(15, 235, 202);
+    display: inline-block;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
 }
 
-.one-block.has-item {
-    background-color: #17efd6;
-    color: white;
+.one-block.gray {
+    background-color: rgba(0, 0, 0, 0.143);
 }
